Correlation Visible on Simple Scenes when using the new PMJ sampler #91632

Closed
opened 2021-09-23 11:17:29 +02:00 by William Leeson · 10 comments
Member

System Information
Operating system: Linux-5.13.16-200.fc34.x86_64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA RTX A4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 23:29, hash: a78d3c5261
Worked: (newest version of Blender that worked as expected)

Short description of error
There appears to be sample correlation in the image when rendering simple scenes. The mushroom scene below exhibits these artefacts

Adaptive sampling off Adaptive sampling on
Adaptive Sampling off.jpg Adaptive Sampling on.jpg
Uses Sobol sampler Uses PMJ sampler

Exact steps for others to reproduce the error
Open the mushroom.blend file and hit F12 to render. Notice the correlation between pixels which make the diffuse mushroom look shiny.
Mushroom.blend

**System Information** Operating system: Linux-5.13.16-200.fc34.x86_64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA RTX A4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 23:29, hash: `a78d3c5261` Worked: (newest version of Blender that worked as expected) **Short description of error** There appears to be sample correlation in the image when rendering simple scenes. The mushroom scene below exhibits these artefacts | Adaptive sampling off | Adaptive sampling on | | -- | -- | | ![Adaptive Sampling off.jpg](https://archive.blender.org/developer/F10557566/Adaptive_Sampling_off.jpg) |![Adaptive Sampling on.jpg](https://archive.blender.org/developer/F10557570/Adaptive_Sampling_on.jpg)| | Uses Sobol sampler | Uses PMJ sampler | **Exact steps for others to reproduce the error** Open the mushroom.blend file and hit F12 to render. Notice the correlation between pixels which make the diffuse mushroom look shiny. [Mushroom.blend](https://archive.blender.org/developer/F10558582/Mushroom.blend)
William Leeson self-assigned this 2021-09-23 11:17:29 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscribers: @leesonw, @brecht, @Sergey, @SteffenD

Added subscribers: @leesonw, @brecht, @Sergey, @SteffenD
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@leesonw : if you are reporting bugs, it might also make sense to use Help > Report a Bug from within blender (or fill out the template https://developer.blender.org/maniphest/task/edit/form/1/).
This makes sure information such as build hash is available here [which might make a difference in future reference].

Could you update your report?

@leesonw : if you are reporting bugs, it might also make sense to use `Help` > `Report a Bug` from within blender (or fill out the template https://developer.blender.org/maniphest/task/edit/form/1/). This makes sure information such as build hash is available here [which might make a difference in future reference]. Could you update your report?
Author
Member

Thanks for the suggestion. I have updated the description and used the bug format now.

Thanks for the suggestion. I have updated the description and used the bug format now.

Added subscriber: @Florian-10

Added subscriber: @Florian-10

Heyy that's my scene lol haha
Good luck!

Heyy that's my scene lol haha Good luck!

This issue was referenced by blender/cycles@da0c0b9bee

This issue was referenced by blender/cycles@da0c0b9bee6490f688f735dffa2ffca23de5bdfe

This issue was referenced by f3ace5aa80

This issue was referenced by f3ace5aa8015a5b5fcd063054a37c6d18d5164d2
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91632
No description provided.